[gd_scene load_steps=13 format=3 uid="uid://dfdc8m4o3u2j4"]

[ext_resource type="Script" path="res://scenes/manual/manual.gd" id="1_ebhdm"]
[ext_resource type="AudioStream" uid="uid://ci7uo11ijrln3" path="res://scenes/manual/page_flip.wav" id="2_dsv0w"]
[ext_resource type="Texture2D" uid="uid://dh3mlfs6d0uyb" path="res://sprites/spritesheet.png" id="2_jqre2"]
[ext_resource type="FontFile" uid="uid://enfp4afuixsa" path="res://sprites/m5x7.ttf" id="3_8vikr"]
[ext_resource type="AudioStream" uid="uid://5c07yamyaymb" path="res://scenes/manual/page_flip2.wav" id="3_cu8aa"]
[ext_resource type="AudioStream" uid="uid://bugf3h37lje2" path="res://scenes/manual/page_flip3.wav" id="4_7eee2"]
[ext_resource type="AudioStream" uid="uid://b2kfp8rd27o1g" path="res://scenes/manual/page_flip4.wav" id="5_p05b4"]
[ext_resource type="FontFile" uid="uid://bnf1simfy7cse" path="res://DepartureMono-Regular.woff" id="8_5urv3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_duq1n"]
atlas = ExtResource("2_jqre2")
region = Rect2(429, 9, 201, 249)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo6n8"]
atlas = ExtResource("2_jqre2")
region = Rect2(639, 63, 123, 69)

[sub_resource type="LabelSettings" id="LabelSettings_p0ulv"]
font = ExtResource("3_8vikr")
font_size = 36
font_color = Color(0.239216, 0.239216, 0.239216, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngoo3"]
atlas = ExtResource("2_jqre2")
region = Rect2(429, 270, 201, 249)

[node name="Manual" type="Node2D"]
script = ExtResource("1_ebhdm")
flip_sounds = Array[AudioStreamWAV]([ExtResource("2_dsv0w"), ExtResource("3_cu8aa"), ExtResource("4_7eee2"), ExtResource("5_p05b4")])

[node name="CoverRect" type="NinePatchRect" parent="."]
unique_name_in_owner = true
offset_right = 475.0
offset_bottom = 767.0
texture = SubResource("AtlasTexture_duq1n")
region_rect = Rect2(0, 0, 201, 249)
patch_margin_left = 56
patch_margin_top = 33
patch_margin_right = 81
patch_margin_bottom = 138

[node name="Sprite2D" type="Sprite2D" parent="CoverRect"]
position = Vector2(246, 194)
scale = Vector2(1.9058, 1.9058)
texture = SubResource("AtlasTexture_uo6n8")

[node name="Label" type="Label" parent="CoverRect"]
layout_mode = 0
offset_left = 134.0
offset_top = 147.0
offset_right = 349.0
offset_bottom = 250.0
text = "Alarm Manual
Authorised Use
Only"
label_settings = SubResource("LabelSettings_p0ulv")
horizontal_alignment = 1

[node name="InstructionsRect" type="NinePatchRect" parent="."]
unique_name_in_owner = true
offset_right = 475.0
offset_bottom = 767.0
texture = SubResource("AtlasTexture_ngoo3")
region_rect = Rect2(0, 0, 201, 249)
patch_margin_left = 56
patch_margin_top = 33
patch_margin_right = 81
patch_margin_bottom = 81

[node name="MarginContainer" type="MarginContainer" parent="InstructionsRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 90

[node name="RichTextLabel" type="RichTextLabel" parent="InstructionsRect"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 15.0
offset_top = 30.0
offset_right = 460.0
offset_bottom = 677.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("8_5urv3")
bbcode_enabled = true
text = "Congratulations citizen #332452 on winning the annual national employment raffle! For the forseeable future, you will be solely responsible for the operation and maintenance of this T-23-X4 Nuclear Processing and Enrichment Reactor. 

[center][img width=100]scenes/manual/gauge.png[/img][/center]

This manual will cover the neccessary diagnosis and corrections in the event of manual intervention for the Enrichment Reactor. Failure to strictly adhere to this manual will result in reactor overload and catastrophic meltdown.

[center][u]Alarm Protocol[/u][/center]

In extremely rare circumstances the system may require human input and will alert via a flashing LED on the instrument panel. Find the problem instrument and refer to the rest of the instruction manual as to how to diagnose this alarm and bring the system back to nominal working order.

To start the reactor, follow the Sign In Procedure at the end of this manual. When your shift has finished, ensure all alarms are disabled.



[center][u]Alarms[/u][/center]

"
scroll_active = false

[node name="NextButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 341.0
offset_top = 690.0
offset_right = 450.0
offset_bottom = 723.0
text = "Next"

[node name="PreviousButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 13.0
offset_top = 690.0
offset_right = 122.0
offset_bottom = 723.0
text = "Previous"

[connection signal="pressed" from="NextButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PreviousButton" to="." method="_on_previous_button_pressed"]
